@startuml BDD - Relational model
title BDD - Relational model
!theme plain
hide circle

entity item{
  <u>id</u>
  --
  name
  price_ex_vat
  vat_percentage
  left_in_stock
  description
  image_url
  category_name
}
entity category{
  <u>name</u>
  --
  description
}
entity referent{
  <u>id</u>
  --
  designation
  first_name
  last_name
  birth_date
  is_alive 
  nickname [0..1]
  website [0..1]
  school_of_thought_id
}
entity school_of_thought{
  <u>id</u>
  --
  name
  description
}
entity order{
  <u>id</u>
  --
  creation_time
  employee_id
  client_id
}
entity client{
  <u>id</u>
  --
  first_name
  last_name
  delivery_address_id
}
entity order_line{
  <u>order_id</u>
  <u>item_id</u>
  --
  quantity
  price_at_the_time
}


entity coupon{
  <u>code</u>
  --
  discount_percentage
}

entity employee{
  <u>id</u>
  --
  first_name
  last_name
  hiring_date
  salary
}
entity country{
  <u>name</u>
  --
  is_supported 
}
entity locality{
  <u>id</u>
  --
  name
  zip_code
  is_supported 
  country_name
}
entity delivery_address{
  <u>id</u>
  --
  is_pickup_point 
  num_in_street
  street_name
  box [0..1]
  locality_id
}

entity order_coupon{
  <u>order_id</u>
  <u>coupon_code</u>
}
entity item_referent{
  <u>item_id</u>
  <u>referent_id</u>
}

item::category_name --> category::name

referent::school_of_thought_id --> school_of_thought::id

order::employee_id --> employee::id
order::client_id --> client::id

client::delivery_address_id --> delivery_address::id

order_line::order_id --> order::id
order_line::item_id --> item::id

locality::country_name --> country::name
delivery_address::locality_id --> locality::id

order_coupon::order_id --> order::id
order_coupon::coupon_code --> coupon::code

item_referent::item_id --> item::id
item_referent::referent_id --> referent::id
@enduml